updated aboutme and footer

--- a/index.html
+++ b/index.html
@@ -46,16 +46,25 @@
 
     <!-- About Me -->
     <div class="container text-center">
-        <h1 class="display-4">About</h1>
+        <h1 class="display-4">About Me</h1>
         <p class="lead">I'm a self-taught Web Developer with a background in Cloud and Network Engineering.</p>
         <p class="lead">After Covid-19 struck in the U.S. I decided to spend my time in lockdown learning Full-Stack Web Development.
-            I quickly found a passion for building web apps.
+            I quickly found I had a passion for building cool web applications.
         </p>
     </div>
 
-
+    <!-- Footer -->
+    <footer id="main-footer" class="">
+        <div class="container text-center">
+              <p>Curtis Rubeck &copy; <span id="year"></span></p>
+          </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script>
+        $("#year").text(new Date().getFullYear());
+    </script>
 </body>
 </html>
