--- a/index.html
+++ b/index.html
@@ -46,15 +46,22 @@
 
     <!-- About Me -->
     <div class="container text-center">
+        <hr>
         <h1 class="display-4">About Me</h1>
         <p class="lead">I'm a self-taught Web Developer with a background in Cloud and Network Engineering.</p>
         <p class="lead">After Covid-19 struck in the U.S. I decided to spend my time in lockdown learning Full-Stack Web Development.
-            I quickly found I had a passion for building cool web applications.
+            I quickly found a passion for building cool web applications.
+        </p>
+        <p class="lead">I started my career as a Network Engineer supporting medium-large enterprise networks. In 2016, 
+            I acheived the CCNA certification and continued to support and engineer data center networks until 2020. After 2019, 
+            I transitioned to be a Cloud Engineer with a focus on migrating applications 
+            and services to AWS.
         </p>
     </div>
 
     <!-- Footer -->
-    <footer id="main-footer" class="">
+    <footer id="main-footer" class="container">
+        <hr>
         <div class="container text-center">
               <p>Curtis Rubeck &copy; <span id="year"></span></p>
           </div>
