updated about me section again

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <!-- About Me -->
-    <div class="container text-center">
+    <div class="container text-center mb-5">
         <hr>
         <h1 class="display-4">About Me</h1>
         <p class="lead">I'm a self-taught Web Developer with a background in Cloud and Network Engineering.</p>
