--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p class="lead">After Covid-19 struck in the U.S. I decided to spend my time in lockdown learning Full-Stack Web Development.
             I quickly found a passion for building cool web applications.
         </p>
-        <p class="lead">I started my career as a Network Engineer supporting medium-large enterprise networks. In 2016, 
+        <p class="lead">I started my career as a Network Engineer, supporting medium-large enterprise networks. In 2016, 
             I acheived the CCNA certification and continued to support and engineer data center networks until 2020. After 2019, 
             I transitioned to be a Cloud Engineer with a focus on migrating applications 
             and services to AWS.
