fixed navbar display bug

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <header>
       <nav class="nav collapsible">
-        <a class="nav__brand" href="#">Curtis Rubeck</a>
-        <svg class="icon icon--white">
+        <a class="nav__brand" href="/">Curtis Rubeck</a>
+        <svg class="icon icon--white nav__toggler">
           <use xlink:href="./img/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
